--- a/pocetna.css
+++ b/pocetna.css
@@ -152,3 +152,15 @@
     height: auto; 
     object-fit: cover;
   }
+
+  .img-wrapper2 {
+    width: 90px; 
+    height: 90px; 
+    border: 2px solid white; 
+    border-radius: 50%; 
+    overflow: hidden; 
+    display: flex; 
+    justify-content: center; 
+    align-items: center; 
+  }
+  
